Fixes banner margin when admin bar is visible

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -96,6 +96,12 @@ body {
   background-color: $white;
 }
 
+.hasAdminBar {
+  .banners {
+    margin-top: 0;
+  }
+}
+
 .body {
   margin-bottom: 0;
 
